<resources>
    <string name="app_name">Bir Film Öner</string>
    <string name="loginEmail">Email:</string>
    <string name="loginPassword">Şifre:</string>
    <string name="registerConfPassword">Şifre Onay:</string>
    <string name="chkBeniHatirla">Beni Hatırla</string>
    <string name="btnGiris">GiRİŞ YAP</string>
    <string name="kayitliDegil1">Kayıtlı değil misiniz?</string>
    <string name="txtKayit">KAYIT OL</string>
    <string name="sifremiUnuttum">Şifremi Unuttum</string>
    <string name="designedText">Developed and designed by</string>
    <string name="myName">Yasin Akdoğan</string>
    <string name="kayitli1">Kayıtlı bir üye misiniz?</string>
    <string name="txtGiris">GİRİŞ</string>
    <string name="btnDevam">DEVAM</string>
    <string-array name="cinsiyet">
        <item>Cinsiyet Seçiniz:</item>
        <item>Erkek</item>
        <item>Kadın</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="menuProfile">Profil</string>
    <string name="menuSettings">Ayarlar</string>
    <string name="menuCikis">Çıkış Yap</string>
    <string name="profiliDuzenle">Profili Düzenle</string>
</resources>