<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_iconfinder_customize_user_profile_account_man_1_4484738"
            android:title="@string/menuProfile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_iconfinder_streamline_75_185095"
            android:title="@string/menuSettings" />

        <item
            android:enabled="false"
            android:title="" />

        <item
            android:enabled="false"
            android:title="" />

        <item
            android:enabled="false"
            android:title="" />

        <item
            android:enabled="false"
            android:title="" />

        <item
            android:enabled="false"
            android:title="" />

        <item
            android:enabled="false"
            android:title="" />

        <item
            android:id="@+id/nav_cikis"
            android:icon="@drawable/ic_iconfinder_layer_11_basic_down_shut_ui_4427709"
            android:title="@string/menuCikis" />
    </group>

</menu>