<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#82015478"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ac_register_imgLogo"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_126sdp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"/>

        <EditText
            android:id="@+id/ac_register_edtEmail"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_29sdp"
            android:padding="@dimen/_2sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/loginEmail"
            android:textColorHint="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:layout_below="@id/ac_register_imgLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp" />

        <EditText
            android:id="@+id/ac_register_edtPassword"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_29sdp"
            android:padding="@dimen/_2sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/loginPassword"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:layout_below="@id/ac_register_edtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp" />

        <EditText
            android:id="@+id/ac_register_edtSifreOnay"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_29sdp"
            android:padding="@dimen/_2sdp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/registerConfPassword"
            android:inputType="textPassword"
            android:layout_below="@id/ac_register_edtPassword"
            android:textColorHint="@color/colorBlack"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ac_register_btnKayit"
            android:layout_width="@dimen/_211sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/txtKayit"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_register_border"
            android:layout_marginTop="@dimen/_20sdp" />

        <TextView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@id/ac_register_btnKayit"
            android:text="@string/kayitli1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_63sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/ac_register_txtKayit"
            android:layout_width="@dimen/_62sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_below="@id/ac_register_btnKayit"
            android:text="@string/txtGiris"
            android:textColor="#F2F2F2"
            android:textSize="@dimen/_14sdp"
            android:onClick="setIntentKayit"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_10sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ac_register_designed_text"
            android:layout_width="@dimen/_174sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/designedText"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorBlack"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/myName"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlack"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

</LinearLayout>